HTMLMediaElement: don't ignore interstitials when creating track container.

The text track container creates itself at a very specific position in
the shadow root children. If it doesn't find itself there, it will
create another instance of itself. It means that in a release build, it
will create many instances. On a debug build, it will hit some DCHECKs.

Bug: 848102
Change-Id: I6a76f80358d5dd35f3eb57fa1fb66c3b7ebd0032
Reviewed-on: https://chromium-review.googlesource.com/1080232
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563271}
Former-commit-id: 94a84374b998abd69b845d44d82f1595cf314102